<resources>

    <string name="text_main">All you need to manage your business</string>
    <string name="logo">Logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_welcome_login">WELCOME!</string>
    <string name="txtbtn_login">Login</string>
    <string name="txtTv_forgotPass"><u>Forgot your password?</u></string>
    <string name="title_ressetPass">Reset Password</string>
    <string name="msg_ressetPass">Please check your email and enter the code we have sent to you:</string>
    <string name="txt_code">Code</string>
    <string name="txt_buttonResetPass">Reset</string>
    <string name="txtConfirmPassEt">Confirm Password</string>
    <string name="txtNewPassEt">New Password</string>
    <string name="txtCodeEt">Code</string>
    <string name="txtBtnYesLogout">Yes</string>
    <string name="txtBtnCancelLogout">Cancel</string>
    <string name="txt_logout">Are you sure you want to log out?</string>
    <string name="txt_delete_user">Are you sure you want to delete %1$s?</string>
    <string name="txt_delete_category">Are you sure you want to delete \"Kids\"?</string>
    <string name="txt_newUser">New User</string>
    <string name="et_username">User Name</string>
    <string name="et_emailUser">Email</string>
    <string name="et_passwordUser">Password</string>
    <string name="txt_button_save">Save</string>
    <string name="sp_roleUser">Role</string>
    <string name="txt_btnOk">OK</string>
    <string name="txt_btnNewUser">New User</string>
    <string name="txt_userListUser">Users</string>
    <string name="title_toolbar">POINT OF SALE</string>
    <string name="title_add_category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_btnNewProduct">New Product</string>
    <string name="txt_subtitleProducts">Products</string>
    <string name="txtSubtitleWomen">Women</string>
    <string name="txt_subtitleMen">Men</string>
    <string name="txt_subtitleKids">Kids</string>
    <string name="navigation_drawer_open">Menu open</string>
    <string name="navigation_drawer_close">Menu close</string>
    <string name="title_menuDashboard">Dashboard</string>
    <string name="title_menuProducts">Products</string>
    <string name="title_menuSettings">Settings</string>
    <string name="title_menuLogOut">Log Out</string>
    <string name="tv_addCategory">+ Add Category</string>
    <string name="txt_dialog_resetPassword">Your password has been reset</string>
    <string name="hint_etCategory">Name</string>
    <string name="txt_tvLoadImage">Upload an image:</string>
    <string name="tv_GBProductName">Name</string>
    <string name="tv_GBProductCategory">Category</string>
    <string name="tv_GBProductModel">Model</string>
    <string name="tv_GBProductBrand">Brand</string>
    <string name="tv_GBProductCost">Cost</string>
    <string name="tv_GBProductPrice">Price</string>
    <string name="tv_GBProductColor">Color</string>
    <string name="tv_GBProductMaterial">Material</string>
    <string name="tv_GBProductDescription">Description</string>
    <string name="tv_GBProductStock">Stock</string>
    <string name="tv_GBProductReorder">Reorder</string>
    <string name="txt_newProduct">New Product</string>
    <string name="txt_add_Field">Add field</string>
    <string name="txt_dialog_ProductCreated">Your product was successfully saved.</string>
    <string name="btnBackRessetPassword">Back</string>
    <string name="txt_dialog_userCreated">User created successfully</string>
    <string name="avaliable_title_item">available</string>
    <string name="sold_title_item">sold</string>
    <string name="all_title_item">all</string>
    <string name="dialog_add_field_message">Add Field</string>
    <string name="dialog_add_height">Height</string>
    <string name="dialog_add_size_us">Size Shoes (USA)</string>
    <string name="dialog_add_size_mx">Size Shoes (MX)</string>
    <string name="dialog_add_weight">Weight</string>
    <string name="dialog_add_width">Width</string>
    <string name="dialog_add_offer">Offer</string>
    <string name="txt_dialog_error_product">Please fill all required fields</string>
    <string name="txt_title_dialog_error_product">ERROR</string>
    <string name="title_fragment_women">Women</string>
    <string name="total_products_women">07 products</string>
</resources>