<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_menuDashboard" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/title_menuProducts" />
    </group>

        <item android:title="Extras">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/title_menuSettings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/title_menuLogOut" />
            </menu>
        </item>
</menu>

