<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/layout_dialogs"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitleMsg"
            style="@style/text_white"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_title_dialog_error_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvmsg"
            style="@style/text_white"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/txt_dialog_error_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleMsg" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/button_white"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_btnOk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvmsg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>