<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.listUsers.ListUserActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        style="@style/drawerLayout">
        <!--tools:openDrawer="start" -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/listUsersToolbar"
                style="@style/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTitleToolbar"
                    style="@style/text_small"
                    android:layout_marginEnd="?android:attr/actionBarSize"
                    android:text="@string/title_toolbar" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/home_content"
                style="@style/layout_lists"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listUsersToolbar">

                <TextView
                    style="@style/header2"
                    android:text="@string/txt_userListUser" />

                <Button
                    android:id="@+id/btnNewUser"
                    style="@style/button_dark_blue"
                    android:layout_gravity="center"
                    android:text="@string/txt_btnNewUser" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUsers"
                    android:layout_width="match_parent"
                    android:layout_height="450dp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            style="@style/navigationView"
            app:itemIconTint="@color/darkBlue"
            app:menu="@menu/nav_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>