<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.resetPassword.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/newUserToolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_blue">

            <TextView
                android:id="@+id/tvTitleToolbar"
                style="@style/text_small"
                android:layout_marginEnd="?android:attr/actionBarSize"
                android:text="@string/title_toolbar" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/llResetPass"
            style="@style/main_layout_forms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserToolbar">

            <TextView
                style="@style/header2"
                android:text="@string/txt_newUser" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/groupbox"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etUserName"
                        style="@style/text"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <TextView
                    style="@style/text_small_negative"
                    android:text="@string/et_username" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/groupbox"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etEmailUser"
                        style="@style/text"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <TextView
                    style="@style/text_small_negative"
                    android:text="@string/et_emailUser" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/groupbox"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etPasswordUser"
                        style="@style/text"
                        android:layout_width="0dp"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        tools:ignore="LabelFor" />

                    <ImageView
                        android:id="@+id/ivShowHidePassword"
                        style="@style/icon_Blue"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_eye"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <TextView
                    style="@style/text_small_negative"
                    android:text="@string/et_passwordUser" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/groupbox"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etConfirmPasswordUser"
                        style="@style/text"
                        android:layout_width="0dp"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        tools:ignore="LabelFor" />

                    <ImageView
                        android:id="@+id/ivShowHideConfirmPassword"
                        style="@style/icon_Blue"
                        android:layout_margin="8dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_eye"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <TextView
                    style="@style/text_small_negative"
                    android:text="@string/txtConfirmPassEt" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/groupbox"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spRoleUser"
                        style="@style/text" />
                </LinearLayout>

                <TextView
                    style="@style/text_small_negative"
                    android:text="@string/sp_roleUser" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp">

                <Button
                    android:id="@+id/btnSaveNewUser"
                    style="@style/button_blue"
                    android:layout_gravity="center"
                    android:text="@string/txt_button_save" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@drawable/red_rectangle_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
